--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Build with Maven
       run: mvn -f pom.xml clean verify
     - name: Upload Maven build artifact
-      uses: actions/upload-artifact@1
+      uses: actions/upload-artifact@v1
       with:
         name: artifact
         path: target/myJar.jar
