--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Maven
-      run: mvn -f pom.xml clean verify
+      run: mvn -f pom.xml clean install
     - name: Upload Maven build artifact
       uses: actions/upload-artifact@v1
       with:
