--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - run: mvn -f pom.xml clean compile
+      - run: mvn -f pom.xml compile
   build:
 
     runs-on: ubuntu-latest
@@ -25,7 +25,7 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Maven
-      run: mvn -f pom.xml clean install
+      run: mvn -f pom.xml install -DskipTests
     - name: Upload Maven build artifact
       uses: actions/upload-artifact@v1
       with:
