--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -49,7 +49,7 @@ jobs:
           login-server: ${{ secrets.AZURE_CONTAINER_REGISTRY_LOGIN_SERVER }}
           username: ${{ secrets.AZURE_CONTAINER_REGISTRY_USERNAME }}
           password: ${{ secrets.AZURE_CONTAINER_REGISTRY_PASSWORD }}
-        run: |
+      - run: |
           docker build -t ${{ secrets.AZURE_CONTAINER_REGISTRY_LOGIN_SERVER }}/springtest:${{ github.sha }} .
           docker push ${{ secrets.AZURE_CONTAINER_REGISTRY_LOGIN_SERVER }}/springtest:${{ github.sha }}
         
