--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,7 +1,5 @@
 name: Deploy Spring Boot App as Docker Image to Azure Container Registry
-
 on: [push]
-
 jobs:
   compile:
     runs-on: ubuntu-latest
@@ -13,9 +11,7 @@ jobs:
           java-version: 1.8
       - run: mvn -f pom.xml compile
   build:
-
     runs-on: ubuntu-latest
-    
     needs: compile
     name: Build Maven project
     steps:
@@ -34,8 +30,8 @@ jobs:
         name: artifact
         path: target/myJar.jar
   deploy:
-    runs-on: [ubuntu-latest]
-    needs: [build]
+    runs-on: ubuntu-latest
+    needs: build
     name: Build Docker container and deploy to Kubernetes
     steps:
       - uses: actions/checkout@v1
@@ -52,4 +48,15 @@ jobs:
       - run: |
           docker build -t ${{ secrets.AZURE_CONTAINER_REGISTRY_LOGIN_SERVER }}/springtest:${{ github.sha }} .
           docker push ${{ secrets.AZURE_CONTAINER_REGISTRY_LOGIN_SERVER }}/springtest:${{ github.sha }}
-        
+      - uses: azure/aks-set-context@v1
+        with:
+          creds: '${{ secrets.AZURE_CREDENTIALS }}'
+          cluster-name: testcluster
+          resource-group: testspring
+      - uses: Azure/k8s-deploy@v1
+        with:
+          manifests: |
+            manifests/deployment.yml
+            manifests/service.yml
+          images: |
+            ${{ secrets.AZURE_CONTAINER_REGISTRY_LOGIN_SERVER }}/springtest:${{ github.sha }}
