--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
         - name: testapp
-          image: quay.io/coreos/example-app:v1.0
+          image: renatocardoso.azurecr.io/springtest:v1.0
           ports:
             - name: http
               containerPort: 8080
