Update action and add k8s secret

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,5 +1,5 @@
 name: Deploy Spring Boot App as Docker Container to AKS cluster
-on: [deployment]
+on: [push]
 jobs:
   compile:
     runs-on: ubuntu-latest
@@ -52,14 +52,20 @@ jobs:
           password: ${{ secrets.AZURE_CONTAINER_REGISTRY_PASSWORD }}
       - name: Build and Push Docker image to ACR
         run: |
-          docker build --build-arg AZURE_MONGO_DB="${{ secrets.AZURE_MONGO_DB }}" -t ${{ secrets.AZURE_CONTAINER_REGISTRY_LOGIN_SERVER }}/springtest:${{ github.sha }} .
+          docker build -t ${{ secrets.AZURE_CONTAINER_REGISTRY_LOGIN_SERVER }}/springtest:${{ github.sha }} .
           docker push ${{ secrets.AZURE_CONTAINER_REGISTRY_LOGIN_SERVER }}/springtest:${{ github.sha }}
       - name: Configure AKS context
         uses: azure/aks-set-context@v1
         with:
           creds: '${{ secrets.AZURE_CREDENTIALS }}'
-          cluster-name: testcluster
-          resource-group: testspring
+          cluster-name: inditex-k8s-aks
+          resource-group: inditex-k8s
+      - uses: azure/k8s-create-secret@v1
+        with:
+          namespace: 'default'
+          secret-type: 'generic'
+          arguments:  --from-literal=connection-string=${{ secrets.AZURE_MONGO_DB }}
+          secret-name: cosmosdb-connection-string
       - name: Deploy rolling update to AKS cluster
         uses: Azure/k8s-deploy@v1
         with:
